Fixed replica sed card placement issue on IE

--- a/src/app/frontend/replicationcontrollerlist/replicationcontrollerlistcontainer.scss
+++ b/src/app/frontend/replicationcontrollerlist/replicationcontrollerlistcontainer.scss
@@ -19,6 +19,5 @@
   align-items: center;
   display: flex;
   flex-flow: column wrap;
-  justify-content: top;
   margin-top: $toolbar-height-size-base;
 }
